<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PulseFragment">

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchPulse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/sound_on_off"
        app:layout_constraintBottom_toTopOf="@+id/tvFrequency"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvFrequency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvFrequency"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/sliderFrequency"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchPulse" />

    <com.google.android.material.slider.Slider
        android:id="@+id/sliderFrequency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/slider_frequency"
        android:value="20"
        android:valueFrom="5"
        android:valueTo="100"
        app:layout_constraintBottom_toTopOf="@+id/tvEnvelope"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFrequency" />

    <TextView
        android:id="@+id/tvEnvelope"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvEnvelope"
        app:layout_constraintBottom_toTopOf="@+id/sliderEnvelope"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sliderFrequency" />

    <com.google.android.material.slider.Slider
        android:id="@+id/sliderEnvelope"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/slider_envelope"
        android:value=".5"
        android:valueFrom="0.0"
        android:valueTo="1.0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEnvelope" />

</androidx.constraintlayout.widget.ConstraintLayout>