<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModulationFragment">

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchModulation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/sound_on_off"
        app:layout_constraintBottom_toTopOf="@+id/tvPulseFrequency"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPulseFrequency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvPulseFrequency"
        app:layout_constraintBottom_toTopOf="@+id/sliderPulseFrequency"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchModulation" />

    <com.google.android.material.slider.Slider
        android:id="@+id/sliderPulseFrequency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/frequency_pulse_slider"
        android:stepSize="1.0"
        android:value="20"
        android:valueFrom="2.0"
        android:valueTo="40.0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPulseFrequency" />

</androidx.constraintlayout.widget.ConstraintLayout>